<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

    <name>orca_description</name>
    <version>0.3.0</version>
    <description>Orca description files</description>

    <maintainer email="clyde@mcqueen.net">Clyde McQueen</maintainer>
    <license>BSD</license>

    <url type="repository">https://github.com/clydemcqueen/orca2.git</url>
    <url type="bugtracker">https://github.com/clydemcqueen/orca2/issues</url>

    <author>Clyde McQueen</author>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <buildtool_depend>xacro</buildtool_depend>

    <test_depend>ament_lint_auto</test_depend>

    <!-- This recursively depends on a set of common linters -->
    <test_depend>ament_lint_common</test_depend>

    <depend>tf2</depend>
    <depend>urdf</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>

</package>