<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

    <name>orca_driver</name>
    <version>0.2.0</version>
    <description>Orca driver</description>

    <maintainer email="clyde@mcqueen.net">Clyde McQueen</maintainer>
    <license>BSD</license>

    <url type="repository">https://github.com/clydemcqueen/orca2.git</url>
    <url type="bugtracker">https://github.com/clydemcqueen/orca2/issues</url>

    <author>Clyde McQueen</author>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>br_ms5837</depend>
    <depend>fiducial_vlam</depend>
    <depend>gscam</depend>
    <depend>orca_msgs</depend>
    <depend>rclcpp</depend>
    <depend>rclpy</depend>
    <depend>ros2_shared</depend>
    <depend>sensor_msgs</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>

</package>
